--- a/results/SANITIZE-ON-CLASSIFICATION/MEMORY-OP-INTEGRITY.tex
+++ b/results/SANITIZE-ON-CLASSIFICATION/MEMORY-OP-INTEGRITY.tex
@@ -3,7 +3,7 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \CT & \CT & \CT & \CT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{--W}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{-RW}} \\ & \minrv{m} & \CU & \CU & \CU & \CU &&&&& \\
+     & \minrv{r} & \CT & \CT & \CT & \CT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{--W}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{-RW}} \\ & \minrv{m} & \CU & \CU & \PU & \PU &&&&& \\
     \hline
     
     \multirow{2}{*}{\minrv{Csrrc 1, 1, 2}} & \minrv{r} &  & \PT &  &  &  &   &  &  & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} &  &  &  &  &&&&& \\
