thesis: Update and rearrange result assumptions

--- a/results/CLEAR-ON-DECLASSIFICATION/NO-LEAK.tex
+++ b/results/CLEAR-ON-DECLASSIFICATION/NO-LEAK.tex
@@ -3,22 +3,19 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \CT & \CT & \CT & \CT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{-R-}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} & \PT & \PT & \CT & \CT &&&&& \\
+     & \minrv{r} & \PT & \CT & \PT & \PT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{---}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{L--}} \\ & \minrv{m} & \CT & \PT & \PT & \PT &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Csrrs 2, 1, 2}} & \minrv{r} &  &  & \PT &  &  &   &  &  & \multirow{2}{*}{\minrv{-R-}} \\ & \minrv{m} &  &  &  &  &&&&& \\
-    \hline
-    
-    \multirow{2}{*}{\minrv{Clr}} & \minrv{r} & \PT & \PT &  & \PT &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Csrrs 1, 1, 0}} & \minrv{r} &  & \PT &  &  &  &   & \multirow{2}{*}{\minrv{-R-}} &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
     \multirow{2}{*}{\minrv{Mret}} & \minrv{r} &  &  &  &  & \multirow{2}{*}{\minrv{U}} &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Load 2, 0}} & \minrv{r} &  &  & \CT &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Load 2, 1}} & \minrv{r} &  &  & \CT &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Slt 2, 3, 0}} & \minrv{r} &  &  & \PT &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Mret}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
 \end{tabular}
