--- a/results/NO-PUBLIC-READS/CSR-INTEGRITY.tex
+++ b/results/NO-PUBLIC-READS/CSR-INTEGRITY.tex
@@ -3,16 +3,16 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \CT & \CT & \CT & \CT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{WB}}  & \multirow{2}{*}{\minrv{-RW}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{-R-}} \\ & \minrv{m} & \PU & \PU & \PT & \PT &&&&& \\
+     & \minrv{r} & \CT & \CT & \CT & \CT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{WT}}  & \multirow{2}{*}{\minrv{LRW}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{L-W}} \\ & \minrv{m} & \PU & \PU & \PU & \PU &&&&& \\
     \hline
     
     \multirow{2}{*}{\minrv{Load 3, 3}} & \minrv{r} &  &  &  & \PU &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Csrrs 2, 3, 3}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Csrrc 0, 1, 3}} & \minrv{r} & \PT &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Mret}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Sub 0, 1, 2}} & \minrv{r} & \CT &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
 \end{tabular}
