--- a/results/SANITIZE-ON-CALL/MEMORY-OP-INTEGRITY.tex
+++ b/results/SANITIZE-ON-CALL/MEMORY-OP-INTEGRITY.tex
@@ -3,16 +3,16 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \PU & \PU & \PU & \PU & \multirow{2}{*}{\minrv{U}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{--W}} & \multirow{2}{*}{\minrv{WB}} & \multirow{2}{*}{\minrv{--W}} \\ & \minrv{m} & \CU & \CU & \CU & \CU &&&&& \\
+     & \minrv{r} & \PU & \PU & \PU & \PU & \multirow{2}{*}{\minrv{U}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{--W}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} & \PU & \PU & \PT & \PT &&&&& \\
     \hline
     
     \multirow{2}{*}{\minrv{Ecall}} & \minrv{r} &  &  &  &  & \multirow{2}{*}{\minrv{M}} &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Store 0, 3}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Load 3, 3}} & \minrv{r} &  &  &  & \PT &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Add 2, 1, 0}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Store 1, 3}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
 \end{tabular}
