--- a/results/CLEAR-ON-RET/NO-LEAK.tex
+++ b/results/CLEAR-ON-RET/NO-LEAK.tex
@@ -3,13 +3,13 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \CT & \CT & \CT & \CT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{--W}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{-RW}} \\ & \minrv{m} & \CU & \CU & \PU & \PU &&&&& \\
+     & \minrv{r} & \CT & \PT & \PT & \PT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{--W}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{--W}} \\ & \minrv{m} & \PU & \PU & \PU & \PU &&&&& \\
     \hline
     
     \multirow{2}{*}{\minrv{Mret}} & \minrv{r} &  &  &  &  & \multirow{2}{*}{\minrv{U}} &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-     & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Load 1, 3}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
 \end{tabular}
