--- a/results/NO-PUBLIC-WRITES/NO-LEAK.tex
+++ b/results/NO-PUBLIC-WRITES/NO-LEAK.tex
@@ -3,22 +3,22 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \CT & \CT & \CT & \CT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{WB}}  & \multirow{2}{*}{\minrv{-RW}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{LR-}} \\ & \minrv{m} & \PU & \PU & \PT & \PT &&&&& \\
+     & \minrv{r} & \CT & \PT & \PT & \PT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{LRW}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{L--}} \\ & \minrv{m} & \PU & \PU & \PT & \PT &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Store 2, 3}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Store 0, 0}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  & \CT &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Clr}} & \minrv{r} & \PT & \PT & \PT & \PT &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Csrrc 0, 3, 2}} & \minrv{r} & \PT &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
     \multirow{2}{*}{\minrv{Mret}} & \minrv{r} &  &  &  &  & \multirow{2}{*}{\minrv{U}} &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Load 2, 2}} & \minrv{r} &  &  & \CT &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Load 0, 1}} & \minrv{r} & \CT &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{And 3, 2, 0}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Load 0, 3}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
 \end{tabular}
