--- a/results/SANITIZE-CACHE-ON-CLASSIFICATION/CSR-INTEGRITY.tex
+++ b/results/SANITIZE-CACHE-ON-CLASSIFICATION/CSR-INTEGRITY.tex
@@ -3,40 +3,19 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \CT & \CT & \CT & \CT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{WB}}  & \multirow{2}{*}{\minrv{---}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} & \CT & \CT & \CT & \CT &&&&& \\
+     & \minrv{r} & \CT & \CT & \PT & \PT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{L--}} & \multirow{2}{*}{\minrv{WB}} & \multirow{2}{*}{\minrv{--W}} \\ & \minrv{m} & \PT & \PT & \PT & \PT &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Csrrs 1, 1, 3}} & \minrv{r} &  & \PT &  &  &  &   & \multirow{2}{*}{\minrv{--W}} &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Csrrc 3, 1, 0}} & \minrv{r} &  &  &  &  &  &   &  &  & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Clr}} & \minrv{r} & \PT &  & \PT & \PT &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Load 3, 0}} & \minrv{r} &  &  &  & \CU &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Mret}} & \minrv{r} &  &  &  &  & \multirow{2}{*}{\minrv{U}} &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Csrrs 0, 0, 3}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Loadi 2 IMM}} & \minrv{r} &  &  & \PU &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
-    \hline
-    
-    \multirow{2}{*}{\minrv{Store 0, 2}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
-    \hline
-    
-    \multirow{2}{*}{\minrv{Clr}} & \minrv{r} &  &  &  &  & \multirow{2}{*}{\minrv{M}} &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
-    \hline
-    
-    \multirow{2}{*}{\minrv{San}} & \minrv{r} &  &  & \PT &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
-    \hline
-    
-    \multirow{2}{*}{\minrv{Csrrc 0, 3, 0}} & \minrv{r} &  &  &  &  &  &   & \multirow{2}{*}{\minrv{---}} &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
-    \hline
-    
-    \multirow{2}{*}{\minrv{Load 0, 1}} & \minrv{r} & \PU &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
-    \hline
-    
-    \multirow{2}{*}{\minrv{Csrrs 1, 3, 0}} & \minrv{r} &  &  &  &  &  &   &  &  & \multirow{2}{*}{\minrv{--W}} \\ & \minrv{m} &  &  &  &  &&&&& \\
-    \hline
-    
-    \multirow{2}{*}{\minrv{Csrrc 2, 3, 1}} & \minrv{r} &  &  &  &  &  &   &  &  & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Csrrc 0, 0, 3}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
 \end{tabular}
