--- a/results/SANITIZE-ON-CALL/CSR-INTEGRITY.tex
+++ b/results/SANITIZE-ON-CALL/CSR-INTEGRITY.tex
@@ -3,16 +3,16 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \PU & \PU & \PU & \PU & \multirow{2}{*}{\minrv{U}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{--W}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{-RW}} \\ & \minrv{m} & \CU & \CU & \PU & \PU &&&&& \\
+     & \minrv{r} & \PU & \PU & \PU & \PU & \multirow{2}{*}{\minrv{U}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{--W}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} & \PU & \PU & \PT & \PT &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Ecall}} & \minrv{r} &  &  &  &  & \multirow{2}{*}{\minrv{M}} &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Csrrc 1, 0, 1}} & \minrv{r} &  &  &  &  & \multirow{2}{*}{\minrv{M}} &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Csrrs 0, 1, 1}} & \minrv{r} & \PT &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Csrrs 0, 0, 3}} & \minrv{r} & \CT &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Sub 0, 2, 3}} & \minrv{r} & \PU &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+     & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
 \end{tabular}
