--- a/results/SANITIZE-ON-CLASSIFICATION/CSR-INTEGRITY.tex
+++ b/results/SANITIZE-ON-CLASSIFICATION/CSR-INTEGRITY.tex
@@ -3,16 +3,16 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \CT & \CT & \CT & \CT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{--W}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} & \CU & \CU & \CT & \CT &&&&& \\
+     & \minrv{r} & \CT & \CT & \PT & \PT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{-R-}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{--W}} \\ & \minrv{m} & \PT & \PT & \CU & \PU &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Csrrc 3, 1, 0}} & \minrv{r} &  &  &  & \PT &  &   & \multirow{2}{*}{\minrv{---}} &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Csrrc 2, 1, 1}} & \minrv{r} &  &  &  &  &  &   &  &  & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Load 1, 1}} & \minrv{r} &  & \CU &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Load 3, 0}} & \minrv{r} &  &  &  & \CU &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Csrrc 0, 0, 1}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Csrrs 3, 1, 3}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
     \multirow{2}{*}{\minrv{Mret}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
